# NordicNerd

./: .env.example  .gitignore  README.md  pyproject.toml
src/nordicnerd/: config.py
src/nordicnerd/analysis/: causal_forest.py  task_analysis_causal_forest.py
src/nordicnerd/data/: get_data.py  task_get_data.py
src/nordicnerd/data_management/: task_data_management.py
