[project]
name = "nordicnerd"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "pymongo>=4.15.4",
    "pytask>=0.5.8",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
]
